--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,7 @@
         android:theme="@style/Theme.DatePickerDemo"
         tools:targetApi="31">
         <activity
-            android:name=".common.CalendarActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".educa.CalendarEducaActivity"
+            android:name=".CalendarEducaActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
