--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2")
 
     implementation project(':calendarview')
-    implementation files('libs/mpchart-debug.aar')
+    implementation project(':mpchart')
 }
