--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         tools:targetApi="31">
         <activity
             android:name=".NumberPickerActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".CalendarEducaActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ChartActivity"
             android:exported="true">
